tests/invalid/type/uninitialized_read_call_arg.pts
function main() : void {
    int x;
    string s = x.toString();
}
